--- a/public/user/create.ejs
+++ b/public/user/create.ejs
@@ -7,7 +7,50 @@
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/index.css">
 </head>
-<body>
-    <div class="text-red-300">aaaaaaaa</div>
+<body class="bg-slate-200">
+    <div class="container">
+        <div class="flex flex-col justify-center items-center h-screen">
+            <form class="w-full max-w-sm bg-white shadow-md rounded px-8 py-8 mb-4">
+                <div class="md:flex md:items-center mb-6">
+                  <div class="md:w-1/3">
+                    <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                      Name
+                    </label>
+                  </div>
+                  <div class="md:w-2/3">
+                    <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="text" value="Jane Doe">
+                  </div>
+                </div>
+                <div class="md:flex md:items-center mb-6">
+                    <div class="md:w-1/3">
+                      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                        Email
+                      </label>
+                    </div>
+                    <div class="md:w-2/3">
+                      <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-full-name" type="email" value="janedoe@gmail.com">
+                    </div>
+                  </div>
+                <div class="md:flex md:items-center mb-6">
+                  <div class="md:w-1/3">
+                    <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-password">
+                      Password
+                    </label>
+                  </div>
+                  <div class="md:w-2/3">
+                    <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" id="inline-password" type="password" placeholder="******************">
+                  </div>
+                </div>
+                <div class="md:flex md:items-center">
+                  <div class="md:w-1/3"></div>
+                  <div class="md:w-2/3">
+                    <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                      Submit
+                    </button>
+                  </div>
+                </div>
+              </form>
+        </div>
+    </div>
 </body>
 </html>
