--- a/public/user/index.ejs
+++ b/public/user/index.ejs
@@ -10,12 +10,12 @@
 <body class="bg-slate-200">
     <div class="container">
         <div class="flex justify-end pt-8">
-            <button class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex">
+            <a href="/v1/users/create" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg> 
                 Create
-              </button>
+              </a>
         </div>
         <table class="table-auto min-w-full mt-10 bg-white shadow-md rounded">
             <thead>
