--- a/public/auth/login.ejs
+++ b/public/auth/login.ejs
@@ -26,31 +26,8 @@
       <form
         autocomplete="off"
         class="w-full max-w-lg bg-white shadow-md rounded px-8 py-8 mb-4"
-        id="create-user"
+        id="login-form"
       >
-        <div class="md:flex md:items-center mb-6">
-          <div class="md:w-1/3">
-            <label
-              class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-              for="name"
-            >
-              Name
-            </label>
-          </div>
-          <div class="md:w-2/3">
-            <input
-              class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-              id="name"
-              type="text"
-              placeholder="Enter your name"
-            >
-            <span
-              class="text-red-500 text-xs error-message"
-              id="error-name"
-            >
-            </span>
-          </div>
-        </div>
         <div class="md:flex md:items-center mb-6">
           <div class="md:w-1/3">
             <label
@@ -112,44 +89,20 @@
       </form>
     </div>
   </div>
-</body>
-<script>
-
-
-
-  const form = document.querySelector('#create-user');
-  const name = document.querySelector('#name');
-  const email = document.querySelector('#email');
-  const password = document.querySelector('#password');
-  const errorMessages = document.querySelectorAll('.error-message')
-
-  const clearErrorMessage = () => {
-    errorMessages.forEach((el) => {
-      el.innerText = '';
-    })
-  }
-
-  form.addEventListener('submit', function (e) {
-    clearErrorMessage();
-    e.preventDefault();
-    const data = {
-      name: name.value,
-      email: email.value,
-      password: password.value,
-    }
-    axios.post('/v1/users', data)
-      .then(res => {
-        location.href = '/v1/users'
-      }).catch(error => {
-        console.log(error)
-        if (error.response.status === 422) {
-          error.response.data.messages.forEach(function (item) {
-            const [key, value] = Object.entries(item)[0]
-            document.querySelector(`#error-${key}`).innerText = value;
-          })
-        }
+  <script>
+    const email = document.querySelector('#email');
+    const password = document.querySelector('#password');
+    
+    document.querySelector('#login-form').addEventListener('submit', function(e) {
+        e.preventDefault();
+          axios.post('/v1/auth/login', {email:email.value,password:password.value})
+        .then(() => {
+          location.href  = '/v1/users'
+        })
+        .catch(() => {
+          alert('User name or password wrong')
       })
-  })
-</script>
-
+    })
+  </script>
+</body>
 </html>
