--- a/public/user/index.ejs
+++ b/public/user/index.ejs
@@ -17,7 +17,7 @@
                 Create
               </a>
         </div>
-        <table class="table-auto min-w-full mt-10 bg-white shadow-md rounded">
+        <table class="table-auto min-w-full mt-10 bg-white shadow-md rounded mb-10">
             <thead>
               <tr>
                 <th class="px-4 py-4">ID</th>
