--- a/public/user/index.ejs
+++ b/public/user/index.ejs
@@ -22,7 +22,7 @@
                 Next
               </a>
               <select id="sort" class="ml-3 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg  block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white focus:outline-none dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                <option >Sorting</option>
+                <option value="">Sorting</option>
                 <option <%= request.query.sort == '1' ?  'selected' : '' %> value="1">Ascending</option>
                 <option <%= request.query.sort == '-1' ?   'selected' : '' %>  value="-1">Decending</option>
               </select>
