--- a/public/auth/login.ejs
+++ b/public/auth/login.ejs
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  >
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  >
-  <title>Document</title>
-  <link
-    rel="stylesheet"
-    href="/assets/css/index.css"
-  >
-  <script src="/assets/js/app.js"></script>
-</head>
-
-<body class="bg-slate-200">
-  <%- include('../partials/nav') %>
+<%- include('../partials/nav', { title : 'login'}) %>
   <div class="container">
     <div class="flex flex-col justify-center items-center h-screen">
       <form
@@ -134,5 +112,4 @@
       })
     })
   </script>
-</body>
-</html>
+<%- include('../partials/footer') %>
