--- a/public/user/create.ejs
+++ b/public/user/create.ejs
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  >
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  >
-  <title>Document</title>
-  <link
-    rel="stylesheet"
-    href="/assets/css/index.css"
-  >
-  <script src="/assets/js/app.js"></script>
-</head>
-
-<body class="bg-slate-200">
-  <%- include('../partials/nav') %>
+<%- include('../partials/nav', {title:'create user'}) %>
   <div class="container">
     <div class="flex flex-col justify-center items-center h-screen">
       <form
@@ -155,7 +133,6 @@
       </form>
     </div>
   </div>
-</body>
 <script>
 
 
@@ -194,5 +171,4 @@
       })
   })
 </script>
-
-</html>
+<%- include('../partials/footer') %>
