--- a/public/user/index.ejs
+++ b/public/user/index.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/index.css">
-    <script src="/assets/js/app.js"></script>
-</head>
-<body class="bg-slate-200">
+<%- include('../partials/nav', {title : 'user lists'}) %>
     <div x-data="modal">
       <div class="relative z-10" x-cloak aria-labelledby="modal-title" role="dialog" aria-modal="true"  x-show="open" @show-modal.window="showModal($event.detail)">
         <!--
@@ -52,16 +42,14 @@
                 </div>
               </div>
               <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-                <button @click="deleteUser" type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-                <button @click="open=false" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+                <button @click="deleteUser" type="button" :disabled="loader" class="disabled:opacity-75 inline-flex w-full justify-center rounded-md disabled:hover:bg-red-600 bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
+                <button :disabled="loader"  @click="open=false" type="button" class="disabled:opacity-75 mt-3 inline-flex w-full justify-center rounded-md disabled:hover:bg-white bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <%- include('../partials/nav') %>
     <div class="container">
         <div class="flex justify-between items-center pt-8">
             <div class="flex">
@@ -136,20 +124,21 @@
           Alpine.data('modal', () => ({
               open: false,
               id:null,
+              loader:false,
  
               showModal(id) {
                   this.open = true
                   this.id = id
               },
               deleteUser(){
+                this.loader = true
                 axios.delete(`/v1/users/${this.id}`).then(()=>{
                   location.reload();
                 }).catch(()=>{
-                  alert("error");
+                   this.loader = false;
                 })
               }
           }))
       })
     </script>
-</body>
-</html>
+<%- include('../partials/footer') %>
