--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -97,19 +97,5 @@
       </form>
     </div>
   </div>
-  <script>
-    const email = document.querySelector('#email');
-    const password = document.querySelector('#password');
-    
-    document.querySelector('#login-form').addEventListener('submit', function(e) {
-        e.preventDefault();
-          axios.post('/v1/auth/login', {email:email.value,password:password.value})
-        .then(() => {
-          location.href  = '/v1/users'
-        })
-        .catch(() => {
-          alert('User name or password wrong')
-      })
-    })
-  </script>
+  <script src="<%= mix('/public/assets/js/auth/login.js') %>"></script>
 <%- include('../partials/footer') %>
